package ast.statements;

import visitor.Visitor;

public class Return  {

//    @Override
//    public <Context, ResultType> ResultType accept(Visitor<Context, ResultType> visitor, Context param) {
//        return visitor.visit(this, param);
//    }
}
