package ast.statements;

public class While {
}
